[tool.poetry]
name = "emrad_toolbox"
version = "0.1.0"
description = "Toolbox to analyse Radar and ECG data"
authors = ["Simon Meske <simon.h.meske@fau.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.3"
neurokit2 = "^0.2.7"
scipy = "^1.12.0"
numba = "^0.58.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
poethepoet = "^0.24.4"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
ruff = "^0.1.14"
numpydoc = "^1.6.0"
sphinx = "^7.2.6"
sphinx-gallery = "^0.15.0"
recommonmark = "^0.7.1"
memory-profiler = "^0.61.0"
matplotlib = "^3.8.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = "py38"
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.poe.tasks]
_format_black = "black ."
_format_ruff = "ruff . --fix-only --exit-zero"
format = ["_format_black", "_format_ruff", "_format_black"]
lint = { cmd = "ruff emrad_toolbox --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff emrad_toolbox --format=github"
_check_black = "black . --check"
ci_check = { sequence = ["_check_black", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov=emrad_toolbox --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
docs = { "script" = "_tasks:task_docs()",  help = "Build the html docs using Sphinx." }
version = { script = "_tasks:task_update_version()" }
